# MahjongCLI

./: .gitignore  README-CN.md  README.md  main.py  pyproject.toml
.claude/: 2026-02-12-implement-the-following-plan.txt  2026-02-13-implement-the-following-plan.txt
data/: scoring_table.json
mahjong/: __main__.py  cli.py
mahjong/core/: __init__.py  hand.py  meld.py  player_state.py  tile.py  wall.py
mahjong/engine/: action.py  ai_delay.py  event.py  game.py  game_logger.py  round.py  time_control.py
mahjong/player/: base.py  greedy_ai.py  human.py
mahjong/rules/: agari.py  fu.py  furiten.py  sanma_rules.py  scoring.py  shanten.py  yaku.py
mahjong/ui/: board_layout.py  i18n.py  input_handler.py  renderer.py  tile_display.py  timeout_input.py
mahjong/ui/locales/: en.py  ja.py  zh.py
tests/: test_agari.py  test_fu.py  test_furiten.py  test_game.py  test_greedy_ai.py  test_hand.py  test_round.py  test_scoring.py  test_shanten.py  test_tile.py  test_wall.py  test_yaku.py
tests/tenhou_replay/: decoder.py  driver.py  parser.py  test_tenhou_replay.py  verifier.py  wall_builder.py
