[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "riichi-mahjong-cli"
version = "1.0.0"
description = "Terminal CLI Japanese Riichi Mahjong game"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
