[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "riichi-mahjong-cli"
version = "1.1.0"
description = "Terminal CLI Japanese Riichi Mahjong game"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
riichi = "mahjong.cli:main"

[tool.setuptools.packages.find]
include = ["mahjong*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
